# polymarket-crypto

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-25-performance-optimization.md
docs/superpowers/specs/: 2026-04-25-performance-optimization-design.md
src/: app.rs  balances.rs  bridge_deposit.rs  config.rs  data_api.rs  deploy_wallet_cmd.rs  deposit_wallet.rs  deposit_wallet_approvals.rs  detection.rs  detection_runtime.rs  events.rs  gamma.rs  gamma_series.rs  main.rs  market_profile.rs  net.rs  poly1271.rs  polymarket_relayer.rs  redeem.rs  take_profit.rs  trading.rs  trailing_stop.rs
src/feeds/: chainlink.rs  chainlink_data_streams.rs  clob_user_ws.rs  clob_ws.rs  market_discovery_gamma.rs  market_discovery_ws.rs  mod.rs  user_trade_sync.rs
src/ui/: render.rs
