[package]
name    = "polymarket-crypto"
version = "1.3.1"
edition = "2021"
rust-version = "1.80"

[dependencies]
# ── async runtime + IO ──────────────────────────────────────────────
tokio             = { version = "1.52", features = ["full"] }
# Pinned to 0.21 where Message::Text still holds String — 0.23+ switched to
# Utf8Bytes and broke a lot of straightforward ws code.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-socks       = "0.5"
futures-util      = "0.3"
url               = "2"
socket2           = "0.6"

# ── http (rustls, no openssl) ───────────────────────────────────────
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "socks", "http2"] }

# ── serde ───────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sonic-rs   = "0.5"
fast-float = "0.2"

# ── TUI ─────────────────────────────────────────────────────────────
ratatui   = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }

# ── ethereum / EIP-712 signing ──────────────────────────────────────
alloy-primitives    = { version = "0.8", features = ["serde"] }
alloy-signer        = "0.7"
alloy-signer-local  = "0.7"
alloy-sol-types     = "0.8"

# ── auth (HMAC-SHA256 for CLOB L2) ──────────────────────────────────
hmac      = "0.12"
sha2      = "0.10"
base64    = "0.22"

# ── misc ────────────────────────────────────────────────────────────
anyhow            = "1"
thiserror         = "2"
chrono            = { version = "0.4", features = ["serde"] }
chrono-tz         = "0.10"
uuid              = { version = "1", features = ["v4"] }
rand              = "0.9"
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
alloy-dyn-abi = { version = "0.8", features = ["eip712", "std"] }
hex               = "0.4"
qrcode            = "0.14"

# Chainlink Data Streams (optional spot feed when CHAINLINK_API_KEY + CHAINLINK_USER_SECRET are set)
chainlink-data-streams-sdk   = "1.2"
chainlink-data-streams-report = "1.2"
num-bigint  = "0.4"
num-traits  = "0.2"

[profile.release]
opt-level        = 3
lto              = "thin"
codegen-units    = 1
strip            = true
panic            = "abort"
